3. Уникальность элементов и сортировка. [#110225]